tests/ui/codemap_tests/issue-28308.stderr
error[E0308]: mismatched types
  --> $DIR/issue-28308.rs:2:13
   |
LL |     assert!("foo");
   |             ^^^^^ expected `bool`, found `&str`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
