tests/ui/codemap_tests/issue-28308.rs
fn main() {
    assert!("foo");
    //~^ ERROR mismatched types
}
